--- a/Assignment 5-6/a5_6/css/a5_5.css
+++ b/Assignment 5-6/a5_6/css/a5_5.css
@@ -1,4 +1,4 @@
-/* Authors: David Barrios, Paul Jordan, Can Tarhan, Alexander Gutierrez
+/* Authors: David Barrios c0893262, Paul Jordan c0899319, Can Tarhan c0895400, Alexander Gutierrez c0895239
    Date: 05 - November - 2023 */
 
 * {
